# pokemon-cli

./: Cargo.toml
src/: main.rs
src/pokeapi/: get.rs  interface.rs  mod.rs
