[package]
name = "pokemon-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pokecli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
